
2004/06/27: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: 
  - started working on FileDialog
  - more work/fixes in TableWidget and TextWidget
  - even more work/fixes
  - fixed more bugs in EditBox, more work on FileDialog (can now at least 
    be used to select a file. Otherwise not very usefull for now)
- gwenhywfar.m4: fixed a bug


2004/06/26: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: 
  - introduced MODAL flag for widgets (focus will never go beyond a MODAL
    widget)
  - completed MessageBox, which is now able to calculate the necessary width
    and height by itself
  - added EditBox
  - added CheckBox
  - fixed some bugs
  - added a help string which can be assigned to a widget. Whenever F1 is
    pressed the current widget will popup a message box and show that help
    text in it. If the widget which currently possesses the focus does not
    have a help string the parents will be consulted.
  - added a subscription model: Widgets can now subscribe to any event
    received by any other widget. This is similiar to the signal/slot
    mechanism used in *graphical* user interfaces
  - added DropDownBox (basically an edit widget with a list of choices to
    drop down)
  - TextWidget: Now sends a "Chosen" event when ENTER is pressed in line mode.
    This is interpreted e.g. by the DropDownBox.
  - UI headers are now expected in "${prefix}/include/gwenhywfar/ui"
  - focus can now be changed to the nex *AND* to the previously active
    widget ;-)
- parser/xml: now accepts simple tags (like "<br>" or "<hr>") without
  ending tags (e.g. there is no more need for "<br/>").
  This allows to use simple HTML for texts in TextWidget and derived classes.
- configure.ac, gwenhywfar-config.in.in:
  - added checks and switches to determine whether UI or crypto support is
    compiled into Gwenhywfar
  - UI headers are installed to ${prefix}/include/gwenhywfar/ui