@@ -7,6 +7,7 @@
   - even more work/fixes
   - fixed more bugs in EditBox, more work on FileDialog (can now at least 
     be used to select a file. Otherwise not very usefull for now)
+  - TableWidget now sends an event when activating a table field
 - gwenhywfar.m4: fixed a bug
 
 
